Added Chat Command
Added Chat Command.
Fixed typo in default welcome config message.
Added aliases for GrantHistory.
Added Muted Chat property for CoreServer.
Changed Staff Join & Leave message.

--- a/Spigot/src/main/resources/config.yml
+++ b/Spigot/src/main/resources/config.yml
@@ -5,7 +5,7 @@ messages:
   welcome:
     - "&7&m--------------------------------------------"
     - "&6Welcome to &6&lPvP Camp!"
-    - "&6Discord: &discord.gg/4F39Qh8dHJ"
+    - "&6Discord: &fdiscord.gg/4F39Qh8dHJ"
     - "&6Store: &fstore.pvp.camp"
     - " "
     - "&cNOTICE: &fWe are still in early beta. Please report any bugs to the developers."
