--- a/Spigot/src/main/resources/plugin.yml
+++ b/Spigot/src/main/resources/plugin.yml
@@ -120,3 +120,6 @@ commands:
     aliases: [userhist, uhistory, uhist]
     description: View the chat, command, and PM history of a player.
     permission: core.commands.userhistory
+  wipepunishments:
+    description: Wipe all punishments from players.
+    permission: core.commands.wipepunishments
