--- a/Spigot/pom.xml
+++ b/Spigot/pom.xml
@@ -49,6 +49,12 @@
             <version>1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.thatkawaiisam</groupId>
+            <artifactId>ziggurat</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
