--- a/Spigot/pom.xml
+++ b/Spigot/pom.xml
@@ -31,6 +31,22 @@
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <!--Spigot 1.7-->
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-1.7</artifactId>
+            <version>1.7.10</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/Spigot1.7.jar</systemPath>
+        </dependency>
+        <!-- Spigot 1.8 -->
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot-1.8</artifactId>
+            <version>1.8.8</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/Spigot1.8.jar</systemPath>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -48,6 +64,20 @@
             <artifactId>Gooey2</artifactId>
             <version>1.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>us.myles</groupId>
+            <artifactId>ViaVersion</artifactId>
+            <version>4.7.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/ViaVersion.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>protocolsupport</groupId>
+            <artifactId>ProtocolSupport</artifactId>
+            <version>4.7.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/ProtocolSupport.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>io.github.thatkawaiisam</groupId>
