--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,19 @@
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Spigot 1.8 -->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-1.8</artifactId>
             <version>1.8.8</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/Spigot1.8.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>camp.pvp</groupId>
+            <artifactId>Practice</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/Practice-1.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
