--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
             <id>viaversion-repo</id>
             <url>https://repo.viaversion.com</url>
         </repository>
+        <repository>
+            <id>dmulloy2-repo</id>
+            <url>https://repo.dmulloy2.net/repository/public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -68,7 +72,8 @@
             <groupId>com.viaversion</groupId>
             <artifactId>viaversion-api</artifactId>
             <version>4.7.0</version>
-            <scope>provided</scope>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/ViaVersion-4.7.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.warrenstrange</groupId>
