--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,10 @@
             <id>viaversion-repo</id>
             <url>https://repo.viaversion.com</url>
         </repository>
+        <repository>
+            <id>dmulloy2-repo</id>
+            <url>https://repo.dmulloy2.net/repository/public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -32,13 +36,19 @@
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Spigot 1.8 -->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-1.8</artifactId>
             <version>1.8.8</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/libs/Spigot1.8.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>camp.pvp</groupId>
+            <artifactId>Practice</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/Practice-1.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -62,7 +72,8 @@
             <groupId>com.viaversion</groupId>
             <artifactId>viaversion-api</artifactId>
             <version>4.7.0</version>
-            <scope>provided</scope>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/libs/ViaVersion-4.7.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.warrenstrange</groupId>
